--- a/fusent-web/package.json
+++ b/fusent-web/package.json
@@ -9,27 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.13",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "@tanstack/react-query": "^5.56.2",
     "@tanstack/react-query-devtools": "^5.56.2",
     "axios": "^1.7.7",
-    "zustand": "^4.5.5",
     "clsx": "^2.1.1",
-    "tailwind-merge": "^2.5.2",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.445.0",
-    "react-hot-toast": "^2.4.1"
+    "next": "14.2.13",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
+    "tailwind-merge": "^2.5.2",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
-    "typescript": "^5.6.2",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.20",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "14.2.13",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "14.2.13"
+    "typescript": "^5.6.2"
   }
 }
