--- a/fusent-web/.env.example
+++ b/fusent-web/.env.example
@@ -1,6 +1,6 @@
 # API Configuration
 # For local development: http://localhost:8080/api/v1
-# For production: https://api.yourdomain.com/api/v1
+# For production server: http://85.113.27.42:901/api/v1
 NEXT_PUBLIC_API_URL=http://localhost:8080/api/v1
 
 # App Configuration
