--- a/.env.production
+++ b/.env.production
@@ -3,7 +3,7 @@
 # Database Configuration
 DB_URL=jdbc:postgresql://localhost:5432/fusent
 DB_USERNAME=fusent_user
-DB_PASSWORD=your_secure_password
+DB_PASSWOR  D=your_secure_password
 
 # MinIO Configuration
 MINIO_URL=http://85.113.27.42:9000
