--- a/fusent_mobile/pubspec.yaml
+++ b/fusent_mobile/pubspec.yaml
@@ -67,6 +67,8 @@ dependencies:
   flutter_map: ^7.0.2
   latlong2: ^0.9.1
   geolocator: ^13.0.2
+  geocoding: ^3.0.0
+  http: ^1.2.2
 
   # Firebase
   firebase_core: ^3.10.0
